feat: host mfe1 application inside shell application

--- a/apps/shell/src/app/app.component.html
+++ b/apps/shell/src/app/app.component.html
@@ -1,1 +1,4 @@
-<mfe-nx-welcome></mfe-nx-welcome>
+<h1>Shell</h1>
+
+<a [routerLink]="[ '/mfe1']">Navigate to route that shows mfe1 hosted by the shell application</a>
+<router-outlet></router-outlet>
